# Crucible

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
app/: dashboard.py
crucible/: __init__.py  alerts.py  backtest.py  cleaner.py  config.py  fetcher.py  filters.py  fx.py  logging_setup.py  options.py  portfolio.py  regime.py  scorer.py  snapshot.py  store.py  validator.py
crucible/ml/: __init__.py  features.py  model.py  ranker.py
crucible/tracks/: track1_quality.py  track2_growth.py  track3_value.py
data/: backtest_report.md  portfolio.csv
data/diagnostics/: filter_funnel.csv  filter_funnel_russell1000.csv  filter_funnel_track2_russell1000.csv  filter_funnel_track2_sp500.csv  filter_funnel_track3_russell1000.csv  track2_momentum_impact.csv  xbrl_audit_sp500.md
data/results/: SP500_12m_contributions.md  (+37 more)
scripts/: audit_xbrl_labels.py  check_alerts.py  diagnose_funnel.py  download_edgar_bulk.py  run_backtest.py  run_backtest_track1.py  run_backtest_track1_sp500.py  run_backtest_track2.py  run_backtest_track2_sp500.py  run_backtest_track2_v3.py  run_backtest_track3.py  run_backtest_track3_sp500.py  run_combined_backtest.py  run_heldout.py  run_heldout_protocol_b.py  run_heldout_three_tracks.py  run_heldout_track2_sp500_v2.py  run_monthly.py  run_phase3a.py  run_phase50_comparison.py  run_phase50_ranker.py  run_scan.py
tests/: test_backtest.py  test_fetcher.py  test_filters.py  test_ml_features.py  test_ml_model.py  test_scorer.py  test_snapshot_features.py  test_store.py  test_track1.py  test_track2.py  test_validator.py
(+9 files in other folders)
