[project]
name = "crucible"
version = "0.1.0"
description = "Monthly quality screener for stocks across global exchanges"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2",
    "sqlalchemy>=2.0",
    "streamlit>=1.35",
    "pandera>=0.20",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crucible"]
