[project]
name = "crucible"
version = "0.1.0"
description = "Monthly quality screener for stocks across global exchanges"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "yfinance>=0.2",
    "sqlalchemy>=2.0",
    "streamlit>=1.35",
    "pandera>=0.20",
    "python-dotenv>=1.0",
    "lxml>=6.1.0",
    "requests>=2.34.2",
    "edgartools>=2.0",
    "psutil>=5.9",
    "joblib>=1.4",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["crucible"]
